# h-tautau

./: .gitignore  CMakeLists.txt  README.md  install_framework.sh  install_framework_cmsdas19.sh
Analysis/: BuildFile.xml
Analysis/config/: pdg_name_type_charge.txt
Analysis/include/: AnalysisTypes.h  BTagger.h  Candidate.h  CandidateUtilities.h  EventCacheProvider.h  EventCandidate.h  EventDescriptor.h  EventId.h  EventInfo.h  EventLoader.h  EventTuple.h  EventWeights.h  FlatAnalyzerData.h  FlatAnalyzerDataCollection.h  FlatEventInfo.h  FlatTree.h  GenParticle.h  GenStatusFlags.h  HHGenEvent.h  Htautau_2015.h  Htautau_Summer13.h  Htautau_TriggerEfficiency.h  JetEnergyUncertainty.h  KinFit.h  KinFitInterface.h  KinFitTree.h  MCfinalState.h  MT2.h  MetFilters.h  MvaMet.h  PUWeights.h  Particle.h  Particles.h  RecoilCorrection.h  RunReport.h  SVfit.h  SVfitAnaInterface.h  SelectionResults.h  SignalObjectSelector.h  SummaryTuple.h  (+8 more)
Analysis/source/: GenMatchCheck.cxx  SyncTreeProducer.cxx
Analysis/src/: EventCacheProvider.cpp  EventCandidate.cpp  EventInfo.cpp  EventLoader.cpp  GenParticle.cpp  KinFitInterface.cpp  SVfitAnaInterface.cc  SVfitAnaInterface.cpp  SignalObjectSelector.cpp  TauUncertainties.cpp  TriggerResults.cpp
Batch/crab/: DY_crab.py  DiBosons__sync_crab.py  DiBosons_crab.py  Hhh_550_crab.py  Hhh_crab.py  ReSynctupleProducer_DATA_crab.py  ReSynctupleProducer_Signal_crab.py  ReSynctupleProducer_crab.py  RunC_crab.py  RunD__sync_crab.py  RunD_crab.py  SyncTuple_T3_crab.py  SyncTuple_crab.py  SyncTuple_v2_crab.py  TTBar_crab.py  TTBar_sync_crab.py  WJets_crab.py
Batch/local/: runAnalysis.sh  runTreeProducer.sh  submitAllAnalysis.sh  submitMultiAnalysis_Batch.sh  submitPatProducer_Batch.sh
Core/include/: AnalysisTypes.h  CacheSummaryTuple.h  CacheTuple.h  Candidate.h  DiscriminatorIdResults.h  EventTuple.h  SummaryTuple.h  TauIdResults.h  TriggerFileConfigEntryReader.h  TriggerFileDescriptor.h  TriggerResults.h  TupleObjects.h
Core/src/: AnalysisTypes.cpp  DiscriminatorIdResults.cpp  EventTuple.cpp  SummaryTuple.cpp  TauIdResults.cpp  TriggerFileConfigEntryReader.cpp  TriggerResults.cpp  TupleObjects.cpp
Cuts/include/: Btag_2016.h  Btag_2017.h  Btag_2018.h  H_tautau_2016_baseline.h  H_tautau_2016_mssm.h  H_tautau_2016_sm.h  H_tautau_2017_baseline.h  H_tautau_Run2.h  btag_Run2.h  eleID_Run2.h  hh_bbtautau_2016.h  hh_bbtautau_2017.h  hh_bbtautau_Run2.h  muonID_Run2.h  tauID_Run2.h
Instruments/: BuildFile.xml  collect_tuple_hadd.sh  find_new_jobs.sh  pdg_name_type.txt  submit_tuple_hadd.sh
Instruments/include/: GenFilters.h  Lester_mt2_bisect.h
Instruments/notebooks/: PileUpCompatibility.ipynb
Instruments/plugins/: BuildFile.xml  PrintGenTruth.cc
Instruments/python/: PrintGenTruth.py  cache_merger.py  create_cache_splitting.py  export_cache_summary.py  filter_tuple.py  find_tuple.py  split_tuple_file.py  submit_cache_producer.py  submit_tuple_merger.py
Instruments/source/: CacheMerger.cxx  CacheTupleProducer.cxx  PrintGen.cxx  TupleMerger.cxx
Instruments/src/: Lester_mt2_bisect.cpp  TupleMerger.cxx
Instruments/test/: DummyCacheProducer_t.cxx
JetTools/: BuildFile.xml
JetTools/include/: BTagCalibrationStandalone.h  BTagger.h  JECUncertaintiesWrapper.h  JecUtilities.h  JetCorrectionUncertainty.h  JetCorrectorParameters.h  SimpleJetCorrectionUncertainty.h
JetTools/src/: BTagCalibrationStandalone.cpp  BTagger.cpp  JECUncertaintiesWrapper.cpp  JecUtilities.cpp  JetCorrectionUncertainty.cpp  JetCorrectorParameters.cpp  SimpleJetCorrectionUncertainty.cpp
McCorrections/: BuildFile.xml
McCorrections/data/: DataPileupHistogram_Moriond17_new.root  DataPileupHistogram_obs.root  MyDataPileupHistogram_Moriond17.root  bTagEff.root  bTagEff_Loose.root  bTagEfficiencies_80X.root  bTagEfficiencies_Moriond17.root  fitresults_tt_moriond2017.json  pile_weight_Moriond_17.root  pile_weight_new_bin.root  pile_weight_obs_bin.root  pileup_weight_200bins_2018.root  pu_mc_distr.root  pu_mc_distr_unified.root  purewHisto.root  reWeight_Fall.root
McCorrections/include/: BTagCalibrationStandalone.h  BTagWeight.h  EventWeights.h  GenEventWeight.h  JECUncertaintiesWrapper.h  JetCorrectionUncertainty.h  JetCorrectorParameters.h  JetPuIdWeights.h  LeptonWeights.h  PileUpWeight.h  Serializable.h  SimpleJetCorrectionUncertainty.h  TauIdWeight.h  TauTriggerSFs2017.h  TauTriggerWeight.h  TauUncertainties.h  TopPtWeight.h  Utilities.h  WeightProvider.h  WeightingMode.h
McCorrections/source/: JetCorrectionUncertainty.cc  JetCorrectorParameters.cc  PUcalc.cxx  PileUpCalc.cxx  PuMcDistr.cxx  SimpleJetCorrectionUncertainty.cc
McCorrections/src/: BTagWeight.cpp  EventWeights.cpp  JetPuIdWeights.cpp  LeptonWeights.cpp  PileUpWeight.cpp  (+4 more)
PatProduction/: BuildFile.xml
Production/: BuildFile.xml
Run/: print_control_plots.sh  resubmitAna_jobs.sh  runPatProducer.sh  submitAnalysis_Batch.sh  submitTreeProducer_Batch.sh
Studies/: BuildFile.xml  microAOD.root  syncTree.root
TreeProduction/: BuildFile.xml
microAODProduction/: BuildFile.xml
(+502 files in other folders)
